--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-    "mongodb": "^3.7.3"
+    "mongodb": "^3.7.3",
+    "@azure/storage-blob": "^12.15.0"
   }
 }
