--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "mongodb": "^3.7.3",
-    "@azure/storage-blob": "^12.15.0"
+    "@azure/storage-blob": "^12.15.0",
+    "sharp": "^0.33.2"
   }
 }
