--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,6 +1,17 @@
-FROM mcr.microsoft.com/azure-functions/node:4-node20
+# Dockerfile
+
+FROM mcr.microsoft.com/azure-functions/node:4-node18
+
+# Instala dependências do sistema necessárias para o sharp
+RUN apt-get update && apt-get install -y \
+    libvips-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /home/site/wwwroot
+
+COPY . .
+
+RUN npm install --production
 
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
-
-COPY . /home/site/wwwroot
