--- a/backend/ampliarImagem/package.json
+++ b/backend/ampliarImagem/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "ampliarImagem",
+  "name": "ampliarimagem",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@azure/storage-blob": "^12.10.0",
-    "mongodb": "^5.7.0",
-    "sharp": "^0.32.0"
+    "@azure/storage-blob": "^12.14.0",
+    "mongodb": "^5.8.0",
+    "sharp": "^0.33.0"
   }
 }
